kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reference-platform
  namespace: reference-platform

spec:
  selector:
    app: reference-platform

  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080

  type: ClusterIP
