kubernetes/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reference-platform
  namespace: reference-platform
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: reference-platform
                port:
                  number: 80
          - path: /swagger-ui
            pathType: Prefix
            backend:
              service:
                name: reference-platform
                port:
                  number: 80
          - path: /v3/api-docs
            pathType: Prefix
            backend:
              service:
                name: reference-platform
                port:
                  number: 80
          - path: /actuator
            pathType: Prefix
            backend:
              service:
                name: reference-platform
                port:
                  number: 80
